--- a/style/default/_colors.scss
+++ b/style/default/_colors.scss
@@ -7,3 +7,5 @@ $prussian-blue: #212f45ff;
 $space-cadet: #272640ff;
 $electric-green: #64FFDA;
 $site-white: whitesmoke;
+$pale-purle: #7F81A6;
+$purple-light: #4D194D;
