--- a/style/main.scss
+++ b/style/main.scss
@@ -7,6 +7,7 @@
 @import './components/sidebar-menu';
 @import './components/home';
 @import './components/footer';
+@import './components/buttons';
 
 // base styling for all pages 
 //  Deals with the overall structure of how the page (structure) renders
