working on projects page with little success!

--- a/style/main.scss
+++ b/style/main.scss
@@ -8,6 +8,7 @@
 @import './components/home';
 @import './components/footer';
 @import './components/buttons';
+@import './components/projects';
 
 // base styling for all pages 
 //  Deals with the overall structure of how the page (structure) renders
