--- a/style/main.css
+++ b/style/main.css
@@ -386,6 +386,133 @@ footer .social-links a {
   letter-spacing: 0.1em;
 }
 
+.green-text-bg-none {
+  font-size: 14px;
+  font-weight: 300;
+  border-radius: 12px;
+  background: none;
+  border-color: #64FFDA;
+  border-width: 1px;
+  color: #64FFDA;
+  padding: 15px 20px;
+  letter-spacing: 0.1em;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+/* hide scrollbar but allow scrolling */
+body {
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+  overflow-y: scroll;
+}
+
+body::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  position: relative;
+  background-color: azure;
+}
+.container img {
+  height: 100%;
+  width: 100%;
+}
+.container .box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 380px;
+  height: 200px;
+  background-color: aquamarine;
+  position: relative;
+}
+
+.container .box .imgbox {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  margin: 4rem;
+}
+
+.container .box:hover .imgbox {
+  transform: translate(-3.5rem, -3.5rem);
+  transition: 0.5s ease-in-out;
+}
+
+.container .box:hover .content {
+  transform: translate(-3.5rem, -3.5rem);
+  transition: 0.5s ease-in-out;
+}
+
+.imgBox {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  transition: all 0.5s ease-in-out;
+}
+
+.imgBox {
+  width: 30rem;
+  height: 30rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+  resize: both;
+}
+
+.content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 1.5rem;
+  display: flex;
+  justify-content: center;
+  background-color: #fff;
+  z-index: 1;
+  align-items: flex-end;
+  text-align: center;
+  transition: 0.5s ease-in-out;
+}
+
+.content h3 {
+  display: block;
+  font-size: 2rem;
+  color: #111;
+  font-weight: 500;
+  line-height: 2rem;
+  letter-spacing: 1px;
+}
+
+.content article {
+  color: #555;
+  font-size: 1.4rem;
+  font-weight: 300;
+  letter-spacing: 2px;
+}
+
+@media (max-width: 600px) {
+  .container .box:hover .content {
+    transform: translate(0, 3.5rem);
+  }
+  .container .box:hover .imgBox {
+    transform: translate(0, -3.5rem);
+  }
+}
 body {
   background-color: #212f45;
   min-height: 100%;
