--- a/style/main.css
+++ b/style/main.css
@@ -166,6 +166,18 @@ input[type=checkbox]:checked ~ .sidebar-menu .menu {
   letter-spacing: 0.1em;
 }
 
+.project-button {
+  margin-top: 20px;
+  font-size: 14px;
+  font-weight: 200;
+  letter-spacing: 0.1em;
+  padding: 5px 10px 5px 10px;
+  background: none;
+  border: 1px solid #64FFDA;
+  border-radius: 6px;
+  color: #64FFDA;
+}
+
 main h1 {
   font-size: 36px;
   font-weight: bolder;
@@ -386,6 +398,18 @@ footer .social-links a {
   letter-spacing: 0.1em;
 }
 
+.project-button {
+  margin-top: 20px;
+  font-size: 14px;
+  font-weight: 200;
+  letter-spacing: 0.1em;
+  padding: 5px 10px 5px 10px;
+  background: none;
+  border: 1px solid #64FFDA;
+  border-radius: 6px;
+  color: #64FFDA;
+}
+
 .green-text-bg-none {
   font-size: 14px;
   font-weight: 300;
@@ -396,6 +420,18 @@ footer .social-links a {
   color: #64FFDA;
   padding: 15px 20px;
   letter-spacing: 0.1em;
+}
+
+.project-button {
+  margin-top: 20px;
+  font-size: 14px;
+  font-weight: 200;
+  letter-spacing: 0.1em;
+  padding: 5px 10px 5px 10px;
+  background: none;
+  border: 1px solid #64FFDA;
+  border-radius: 6px;
+  color: #64FFDA;
 }
 
 * {
@@ -415,104 +451,74 @@ body::-webkit-scrollbar {
   display: none; /* for Chrome, Safari, and Opera */
 }
 
-.container {
+.projects-shell {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: row;
   flex-wrap: wrap;
+}
+
+.projects-shell :nth-child(odd) .overlay {
+  background-color: #006466;
+}
+.projects-shell :nth-child(odd) .overlay :nth-child(3) .overlay {
+  background-color: aliceblue;
+}
+
+.container {
   position: relative;
-  background-color: azure;
-}
-.container img {
-  height: 100%;
-  width: 100%;
-}
-.container .box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 380px;
-  height: 200px;
-  background-color: aquamarine;
-  position: relative;
-}
-
-.container .box .imgbox {
-  position: relative;
-  width: 300px;
-  height: 300px;
-  margin: 4rem;
-}
-
-.container .box:hover .imgbox {
-  transform: translate(-3.5rem, -3.5rem);
-  transition: 0.5s ease-in-out;
-}
-
-.container .box:hover .content {
-  transform: translate(-3.5rem, -3.5rem);
-  transition: 0.5s ease-in-out;
-}
-
-.imgBox {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  transition: all 0.5s ease-in-out;
-}
-
-.imgBox {
-  width: 30rem;
-  height: 30rem;
+  width: 400px;
+  height: auto;
   -o-object-fit: cover;
      object-fit: cover;
-  resize: both;
 }
 
-.content {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  padding: 1.5rem;
-  display: flex;
-  justify-content: center;
-  background-color: #fff;
-  z-index: 1;
-  align-items: flex-end;
-  text-align: center;
-  transition: 0.5s ease-in-out;
-}
-
-.content h3 {
+.image {
   display: block;
-  font-size: 2rem;
-  color: #111;
-  font-weight: 500;
-  line-height: 2rem;
-  letter-spacing: 1px;
+  width: 400px;
+  height: 200px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
-.content article {
-  color: #555;
-  font-size: 1.4rem;
-  font-weight: 300;
-  letter-spacing: 2px;
+.overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #1b3a4b;
+  opacity: 90%;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: 0.5s ease;
 }
 
-@media (max-width: 600px) {
-  .container .box:hover .content {
-    transform: translate(0, 3.5rem);
-  }
-  .container .box:hover .imgBox {
-    transform: translate(0, -3.5rem);
-  }
+.container:hover .overlay {
+  height: 100%;
 }
+
+.text {
+  color: whitesmoke;
+  font-size: 14px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+h4 {
+  margin-bottom: 0;
+  color: whitesmoke;
+}
+
+h6 {
+  color: rgb(228, 71, 71);
+  margin-bottom: 20px;
+  font-weight: 100;
+}
+
 body {
   background-color: #212f45;
   min-height: 100%;
