added blog page with links to blop post pages and linked logo to home/index

--- a/style/components/_projects.scss
+++ b/style/components/_projects.scss
@@ -45,6 +45,14 @@
   height: 100%;
 }
 
+
+// .exit-cross {
+//   position: absolute;
+//   top: 8px;
+//   right: 16px;
+//   color: $site-white;
+// }
+
 .text {
   color: $site-white;
   font-size: 14px;
