--- a/style/main.scss
+++ b/style/main.scss
@@ -9,7 +9,7 @@
 @import './components/footer';
 @import './components/buttons';
 @import './components/projects';
-
+@import './components/blog';
 // base styling for all pages 
 //  Deals with the overall structure of how the page (structure) renders
 
