--- a/style/main.scss
+++ b/style/main.scss
@@ -10,6 +10,7 @@
 @import './components/buttons';
 @import './components/projects';
 @import './components/blog';
+@import './components/contact';
 // base styling for all pages 
 //  Deals with the overall structure of how the page (structure) renders
 
