--- a/style/main.css
+++ b/style/main.css
@@ -669,6 +669,60 @@ form button:hover {
     width: 70%;
   }
 }
+.text-one {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.text-one p {
+  color: #7F81A6;
+  width: 360px;
+}
+
+.img-div {
+  margin: 60px 0 40px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.img-div img {
+  border-radius: 25px;
+  width: 300px;
+  height: auto;
+}
+
+.div-2 {
+  margin-top: 0;
+}
+
+.text-two {
+  color: #1b3a4b;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.text-two p {
+  padding-top: 30px;
+  width: 360px;
+}
+.text-two #lists {
+  padding: 20px 0 0 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 360px;
+}
+
+.cta {
+  padding: 30px 0 10px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 body {
   background-color: #212f45;
   min-height: 100%;
