--- a/style/main.scss
+++ b/style/main.scss
@@ -11,6 +11,7 @@
 @import './components/projects';
 @import './components/blog';
 @import './components/contact';
+@import './components/aboutme';
 // base styling for all pages 
 //  Deals with the overall structure of how the page (structure) renders
 
