--- a/style/components/_aboutme.scss
+++ b/style/components/_aboutme.scss
@@ -1,57 +1,119 @@
-.text-one {
-  @include flex-center;
-  flex-wrap: wrap;
-  // width: 360px;
 
-  p {
-    color: $pale-purle;
-    width: 360px;
+  // styling for mobile view 
 
-    // padding-top: 70px;
-  } 
+  body {
+    line-height: 1.3em;
 
-
-
-}
-
-.img-div {
-  margin: 60px 0 40px 0;
-  @include flex-center;
-
-  img {
-    border-radius: 25px;
-    width: 300px;
-    height: auto;
+    h1 {
+      padding-top: 25px;
+    }
+    
   }
-}
-
-.div-2 {
-  margin-top: 0;
-}
-
-.text-two{
-  color: $charcoal;
-  @include flex-center;
-  flex-direction: column;
-  flex-wrap: wrap;
-  // width: 360px;
-
-  p {
-    padding-top: 30px;
-    width: 360px;
+  // styling for top paragraph
+  .text-one {
+    @include flex-center;
+    // flex-wrap: wrap;
+  
+    p {
+      color: $pale-purle;
+      width: 300px;
+    } 
   }
-
-  #lists{
-    padding: 20px 0 0 0;
-    display: flex;
-    flex-direction: row;
+  // styling for image
+  .img-div {
+    margin: 20px 0 40px 0;
+    @include flex-center;
+  
+    img {
+      border-radius: 25px;
+      width: 300px;
+      height: auto;
+    }
+  }
+// styling for text paragraphs within white section 
+  .div-2 {
+    padding: 0;
+    margin-top: 0;
     justify-content: space-around;
-    width: 360px; 
+    align-items: start;
+    padding-bottom: 30px;
+
+  .text-two, .text-three, #lists {
+    color: $charcoal;
+    width: 300px;
+
+    p {
+      padding-top: 30px;
+      width: 300px;
+    }
+
+    #lists{
+      padding: 20px 0 0 0;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      align-items: flex-start;
+      // width: 300px; 
+    }
   }
 }
-
+// button styling for taking user to contact page
 .cta {
   padding: 30px 0 10px 0;
   @include flex-center;
+}
+// end of default/mobile styling 
+
+// settings for tablet size screens
+@media screen and (min-width: 620px) {
+  .intro-container {
+    padding-left: 70px;
+    transition: 0.5s ease;
+  }
+
+  .above-line {
+  @include flex-center;
+  flex-direction: row;
+  justify-content: space-around;
+
+  p {
+    width: 80%;
+  }
+
+  img {
+    width: 270px;
+    transition: .5s ease;
+    margin-right: 20px;
+  }
+  }
+
+  .div-2 {
+    @include flex-center;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+}
+
+// screen settings for desktop veiw
+@media screen and (min-width: 1000px) {
+  .intro-container {
+    padding: 30px 0  0 150px;
+    transition: 0.5s ease;
+  }
+  
+  .div-2 {
+    .text-two, .text-three {
+    width: 400px;
+
+    p {
+      width: 100%;
+    }
+    }    
+  }
+
+  #list-one{
+      list-style-type: circle;
+      text-decoration: solid;
+    }
 }
 
