--- a/style/components/_projects.scss
+++ b/style/components/_projects.scss
@@ -1,6 +1,10 @@
 @import './buttons';
 @import '../default/default';
 
+.sidebar-menu {
+  z-index: 99;
+}
+
 .projects-shell {
   @include flex-center;
   flex-wrap: wrap;
@@ -15,7 +19,8 @@
 }
 
 .container {
-  position: relative;
+  position: relative ;
+  // z-index: -1;
   width: 400px;
   height: auto;
   object-fit: cover;
@@ -39,6 +44,7 @@
   width: 100%;
   height: 0;
   transition: .5s ease;
+  z-index: revert-layer;
 }
 
 .container:hover .overlay {
@@ -49,12 +55,6 @@
 .container .overlay.show{
   height:100%;
 }
-// .exit-cross {
-//   position: absolute;
-//   top: 8px;
-//   right: 16px;
-//   color: $site-white;
-// }
 
 .text {
   color: $site-white;
