--- a/style/components/_sidebar-menu.scss
+++ b/style/components/_sidebar-menu.scss
@@ -6,10 +6,14 @@
     top: 0;
     height: 100vh;
     margin: 0;
-    padding: 0px 20px;
+    padding: 20px 20px;
     background-color: $midnight-green-eagle-green;
     opacity: 98%;
     width: 180px;
+
+    h2 {
+      padding-top: 30px;
+    }
 
     // checkbox control for returning the sidebar to hidden //
     input[type="checkbox"] {
