--- a/style/components/_sidebar-menu.scss
+++ b/style/components/_sidebar-menu.scss
@@ -10,6 +10,7 @@
     background-color: $midnight-green-eagle-green;
     opacity: 98%;
     width: 180px;
+    z-index: 1;
 
     h2 {
       padding-top: 30px;
