--- a/style/main.scss
+++ b/style/main.scss
@@ -12,6 +12,8 @@
 @import './components/blog';
 @import './components/contact';
 @import './components/aboutme';
+@import './components/oath';
+@import './components/checkbox';
 // base styling for all pages 
 //  Deals with the overall structure of how the page (structure) renders
 
