--- a/style/main.css
+++ b/style/main.css
@@ -840,6 +840,7 @@ body h1 {
   color: #006466;
   font-size: 25px;
   margin-bottom: 10px;
+  line-height: 1.1em;
 }
 .blog-title .divider {
   width: 250px;
@@ -883,6 +884,14 @@ body h1 {
   .paragraphs #oath-protocol-flow {
     width: 600px;
   }
+}
+
+.main-text {
+  margin-top: 20px;
+  color: #1b3a4b;
+}
+.main-text p {
+  padding-top: 15px;
 }
 
 body {
