--- a/style/main.scss
+++ b/style/main.scss
@@ -14,6 +14,7 @@
 @import './components/aboutme';
 @import './components/oath';
 @import './components/checkbox';
+@import './components/physical-auth';
 // base styling for all pages 
 //  Deals with the overall structure of how the page (structure) renders
 
