--- a/style/components/_blog.scss
+++ b/style/components/_blog.scss
@@ -11,7 +11,7 @@
 .post-click {
   border: none;
   background-color: $site-white;
-  pointer-events: none; // turns off the hover effect
+  // pointer-events: none; // turns off the hover effect
   padding: 30px;
 }
 
@@ -25,11 +25,15 @@
   background-color:  rgba(47, 120, 67, 0.211);
   padding: 10px;
   border-radius: 30px;
+  max-width: 370px;
+  height: 470px;
 
   img {
-    width: 350px;
-    height: auto;
+    width: 340px;
+    height: 200px;
     border-radius: 20px;
+    object-fit: cover;
+    margin-top: 10px;
     
 
   }
@@ -45,7 +49,7 @@
   }
 
   p {
-    // text-align: center;
+    text-align: center;
     margin-top: 20px;
     color: $charcoal;
     font-size: 14px;
@@ -54,14 +58,18 @@
   }
 }
 
-span {
-  font-variant-caps: all-petite-caps;
+.read-more {
+  // font-variant-caps: all-petite-caps;
   font-size: 20px;
   padding: 10px 20px 10px 20px;
   background-color: $midnight-green-eagle-green-3;
   color: $site-white;
   border-radius: 10px;
   margin: 20px 0 15px 0;
+}
 
+.read-more:hover {
+  color: $skobeloff;
+  background-color: $electric-green;
 }
 
